<resources>
    <string name="app_name">CSCB07CourseProject</string>

    <!-- String for hints and button texts -->
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="firstNameHint">First name (ie. John)</string>
    <string name="lastNameHint">Last name (ie. Smith)</string>
    <string name="addressHint">Address</string>
    <string name="creditCardHint">Credit card number (ie. 1234567890)</string>
    <string name="creditCardExpiryHint">Expiry date (ie. yyyy-mm-dd)</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="departDate">Departure Date (ie. yyyy-mm-dd)</string>
    <string name="searchFlight">Search Flight</string>
    <string name="searchItineraries">Search Itineraries</string>
    <string name="addClient">Add Client</string>
    <string name="viewClients">View Clients</string>
    <string name="addFlight">Add Flight</string>
    <string name="findFlight">Find Flight</string>
    <string name="findItinerary">Find Itinerary</string>
    <string name="bookItinerary">Book Itinerary</string>
    <string name="pathToFile">Path to File</string>
    <string name="loadFile">Load File</string>
    <string name="flightNumber">Flight Number</string>
    <string name="airline">Airline</string>
    <string name="departureDate">Departure Date</string>
    <string name="arrivalDate">Arrival Date</string>
    <string name="availableSeats">Available Seats</string>
    <string name="cost">Cost</string>
    <string name="updateFlight">Update Flight</string>
    <string name="sortByTime">Sort by Time</string>
    <string name="sortByCost">Sort by Cost</string>
    <string name="sortIncreasing">Reverse Order</string>


    <!-- Strings related to login -->
    <string name="log_In">Log In</string>
    <string name="updateProfile">Update Profile</string>
    <string name="create_admin">Create Admin</string>
    <string name="create_client">Create Client</string>
    <string name="create_user">Create User</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Fill in all fields</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Toolbar titles -->
    <string name="location_title">Location</string>
    <string name="main_title">Main Page</string>
    <string name="log_in_title">Log In</string>
    <string name="create_admin_title">Create Admin</string>
    <string name="create_client_title">Create Client</string>
    <string name="view_profile">View Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="itineraries_list_title">Itineraries</string>
    <string name="book_itinerary_title">Itinerary Details</string>
    <string name="client_list_title">Clients</string>
    <string name="flight_list_title">Flights</string>
    <string name="flight_detail_title">Flight Detail</string>
    <string name="add_file_title">Add Through File</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>

    <!-- Log in/ sign up warnings -->
    <string name="msg_complete_form">Please fill up the form!</string>
    <string name="msg_signup_success">Sign up Successfully</string>
    <string name="msg_log_in_success">Log In Successfully</string>
    <string name="msg_signup_error">Sign up Error!</string>
    <string name="msg_password_mismatch">Both password does not match</string>
    <string name="msg_log_in_error">Email or password is incorrect</string>

    <string name="msg_profile_update_success">Profile Updated</string>
    <string name="msg_profile_update_unsuccessful">Could Not Update Profile</string>

    <string name="msg_update_flight_success">Updated Flight</string>
    <string name="msg_update_flight_unsuccessful">Error Updating Flight</string>

    <!-- Warnings and acceptance -->
    <string name="book_error">Error booking itinerary</string>
    <string name="book_success">Booked itinerary</string>
    <string name="fill_out_details">Fill in origin, destination and departure date</string>
    <string name="error_finding_file">Could not find file</string>
    <string name="parse_error">Date error</string>
    <string name="wrong_file_type">That is the wrong file type!</string>
    <string name="success_upload_file">Successfully Uploaded File</string>
</resources>
