<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cs.b07.cscb07courseproject.fragments.EditClientFragment">

    <EditText
        android:id = "@+id/clientPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/passwordHint"
        android:inputType="textVisiblePassword"/>
    <EditText
        android:id = "@+id/clientFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/firstNameHint"
        android:inputType="textPersonName|textCapWords"/>
    <EditText
        android:id = "@+id/clientLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/lastNameHint"
        android:inputType="textPersonName|textCapWords"/>
    <EditText
        android:id = "@+id/clientAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/addressHint"
        android:inputType="textPostalAddress|textCapWords"/>
    <EditText
        android:id = "@+id/clientCreditCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/creditCardHint"
        android:inputType="number"/>

    <EditText
        android:id = "@+id/clientCreditExpiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/creditCardExpiryHint"
        android:inputType="date"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text ="@string/updateProfile"
        android:onClick = "updateProfile"/>
</LinearLayout>
