<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs.b07.cscb07courseproject.fragments.LogInFragment"
    android:layout_marginTop="40dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">
    <EditText
        android:id = "@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/controller_padding"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id = "@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailET"
        android:paddingTop="@dimen/controller_padding"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordET"
        android:paddingTop="@dimen/controller_padding"
        android:text = "@string/log_In"
        android:onClick="login"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:orientation="horizontal">

        <Button
            android:id="@+id/createUserBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text = "@string/create_admin"
            android:onClick="createAdmin"/>
        <Button
            android:id="@+id/createClientBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/create_client"
            android:onClick="createClient"/>
    </LinearLayout>

</RelativeLayout>
