<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width = "fill_parent"
    android:layout_height = "wrap_content"
    android:orientation = "vertical">
    <EditText android:id = "@+id/first_name_field"
        android:layout_weight = "1"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:hint = "@string/emailHint"/>
    <EditText android:id = "@+id/last_name_field"
        android:layout_weight = "1"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:hint = "@string/passwordHint"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text = "@string/log_In"
        android:onClick = "registerStudent" />
</LinearLayout>