<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cs.b07.cscb07courseproject.fragments.ItineraryListFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/sortByTimeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sortByTime"
            android:layout_weight="0.2"
            android:onClick="sortByTime"/>
        <Button
            android:id="@+id/sortByCostBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sortByCost"
            android:layout_weight="0.2"
            android:onClick="sortByCost"/>
        <Button
            android:id="@+id/sortIncreaseBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sortIncreasing"
            android:layout_weight="0.2"
            android:onClick="sortIncreasing"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itineraryListView">
    </ListView>

</LinearLayout>
