<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs.b07.cscb07courseproject.fragments.MainClientFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/view_profile"
            android:onClick="viewProfile"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/edit_profile"
            android:onClick="editProfile"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint = "@string/origin"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:inputType="text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint = "@string/destination"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:inputType="text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:inputType="date"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="Find Flight"
            android:onClick="findFlight"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="Find Itinerary"
            android:onClick="findItinerary"/>
    </LinearLayout>
</FrameLayout>
